--- a/web/src/main/webapp/templates/AccessPointList.html
+++ b/web/src/main/webapp/templates/AccessPointList.html
@@ -2,7 +2,8 @@
     <div class="span12">
         <h1 class="content-title">Manage Access Points</h1>
         <ul class="crumbs">
-            <li><a style="cursor:pointer;">Access Points</a></li>
+            <li><a style="cursor:pointer;">Access Points</a>
+            </li>
         </ul>
     </div>
 </div>
@@ -11,7 +12,8 @@
     <div class="span12">
         <div class="page-actions">
             <ul>
-                <li><a ng-click="addAccessPoints()"><i class="icon-plus-sign"></i>Edit Access Points</a></li>
+                <li><a ng-click="addAccessPoints()"><i class="icon-plus-sign"></i>Edit Access Points</a>
+                </li>
             </ul>
         </div>
     </div>
@@ -30,67 +32,101 @@
 </div>
 
 <div class="row-fluid">
-<div class="span12">
-<table class="table table-striped table-condensed">
-<thead>
-<tr>
-    <th></th>
-    <th><a ng-click="paginator.setOrder('name')">Name/MAC Address<i ng-class="paginator | sortClass:'name'"></i></a></th>
-    <th><a ng-click="paginator.setOrder('model')">Model<i ng-class="paginator | sortClass:'model'"></i></a></th>
-    <th><a ng-click="paginator.setOrder('orderableIp')">IP Address<i ng-class="paginator | sortClass:'orderableIp'"></i></a></th>
-    <th>
-        <div class="dropdown"><a href="#" role="button" data-toggle="dropdown" class="dropdown-toggle" ng-class="filter.state ? 'active' : null">Status<i class="icon-filter"></i></a>
-            <ul role="menu" class="dropdown-menu">
-                <li><a ng-click="paginator.setOrder('state')">Sort A-&gt;Z</a></li>
-                <li><a ng-click="paginator.setOrder('-state')">Sort Z-&gt;A</a></li>
-                <li class="divider"></li>
-                <li class="filters">
-                    <div>
-                        <ul>
-                            <li><input id="disconnectedState" type="checkbox" ng-model="filter.state" ng-true-value="0" ng-false-value=""><label for="disconnectedState">Disconnected</label></li>
-                            <li><input id="connectedState" type="checkbox" ng-model="filter.state" ng-true-value="1" ng-false-value=""><label for="connectedState">Connected</label></li>
-                            <li><input id="pendingState" type="checkbox" ng-model="filter.state" ng-true-value="2" ng-false-value=""><label for="pendingState">Pending Adoption</label></li>
-                        </ul>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </th>
-    <th><a ng-click="paginator.setOrder('actions')">Actions</a></th>
-    <th><a ng-click="paginator.setOrder('uptime')">Uptime<i ng-class="paginator | sortClass:'uptime'"></i></a></th>
-    <th><a ng-click="paginator.setOrder('user_num_sta')">Devices<i ng-class="paginator | sortClass:'user_num_sta'"></i></a></th>
-    <th><a ng-click="paginator.setOrder('cfgversion')">Version<i ng-class="paginator | sortClass:'cfgversion'"></i></a></th>
-   <th></th>
-</tr>
-</thead>
-<tbody>
-<tr ng-repeat="accessPoint in accessPoints | filter: filter | storeItemCount: paginator.updateTotalItems | orderBy: paginator.orderBy | slice:(paginator.currentPage-1)*20:20">
-    <td><a ng-click="forgetDevice(accessPoint.mac)" ng-show="accessPoint.adopted"><i class="icon-trash"></i></a></td>
-    <td>
-	<a ng-href="#/device/{{accessPoint.id}}">{{accessPoint.name}}/{{accessPoint.mac}}</a>
-    </td>
-    <td>{{accessPoint.model}}</td>
-    <td>{{accessPoint.ip}}</td>
-    <td>{{accessPoint | deviceStatus}}</td>
-    <td>
-        <div class="page-actions">
-            <ul>
-                <li><a class="button-actions" ng-click="upgradeDevice(accessPoint)" ng-show="accessPoint.upgradable && accessPoint.state != 4"><i class=""></i>Update</a></li>
-                <li><a class="button-actions" ng-href="#/device/{{accessPoint.id}}" ng-show="accessPoint.state == 1"><i class=""></i>Details</a></li>
-                <li><a class="button-actions" ng-click="adoptDevice(accessPoint)" ng-show="accessPoint.state == 2"><i class=""></i>Adopt</a></li>
-            </ul>
-        </div>
-    </td>
-    <td>{{accessPoint.uptime | uptime}}</td>
-    <td>{{accessPoint.user_num_sta}}</td>
-    <td>{{accessPoint.version || ''}}</td>
-    <td><a ng-click="redirect(accessPoint.id, 'activity')" ng-show="accessPoint.state == 1">Activity</a></td>
-</tr>
+    <div class="span12">
+        <table class="table table-striped table-condensed">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th><a ng-click="paginator.setOrder('name')">Name/MAC Address<i ng-class="paginator | sortClass:'name'"></i></a>
+                    </th>
+                    <th><a ng-click="paginator.setOrder('model')">Model<i ng-class="paginator | sortClass:'model'"></i></a>
+                    </th>
+                    <th><a ng-click="paginator.setOrder('orderableIp')">IP Address<i ng-class="paginator | sortClass:'orderableIp'"></i></a>
+                    </th>
+                    <th>
+                        <div class="dropdown"><a href="#" role="button" data-toggle="dropdown" class="dropdown-toggle" ng-class="filter.state ? 'active' : null">Status<i class="icon-filter"></i></a>
+                            <ul role="menu" class="dropdown-menu">
+                                <li><a ng-click="paginator.setOrder('state')">Sort A-&gt;Z</a>
+                                </li>
+                                <li><a ng-click="paginator.setOrder('-state')">Sort Z-&gt;A</a>
+                                </li>
+                                <li class="divider"></li>
+                                <li class="filters">
+                                    <div>
+                                        <ul>
+                                            <li>
+                                                <input id="disconnectedState" type="checkbox" ng-model="filter.state" ng-true-value="0" ng-false-value="">
+                                                <label for="disconnectedState">Disconnected</label>
+                                            </li>
+                                            <li>
+                                                <input id="connectedState" type="checkbox" ng-model="filter.state" ng-true-value="1" ng-false-value="">
+                                                <label for="connectedState">Connected</label>
+                                            </li>
+                                            <li>
+                                                <input id="pendingState" type="checkbox" ng-model="filter.state" ng-true-value="2" ng-false-value="">
+                                                <label for="pendingState">Pending Adoption</label>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </th>
+                    <th><a ng-click="paginator.setOrder('actions')">Actions</a>
+                    </th>
+                    <th><a ng-click="paginator.setOrder('uptime')">Uptime<i ng-class="paginator | sortClass:'uptime'"></i></a>
+                    </th>
+                    <th><a ng-click="paginator.setOrder('user_num_sta')">Devices<i ng-class="paginator | sortClass:'user_num_sta'"></i></a>
+                    </th>
+                    <th><a ng-click="paginator.setOrder('cfgversion')">Version<i ng-class="paginator | sortClass:'cfgversion'"></i></a>
+                    </th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="accessPoint in accessPoints | filter: filter | storeItemCount: paginator.updateTotalItems | orderBy: paginator.orderBy | slice:(paginator.currentPage-1)*20:20">
+                    <td>
+                        <div class="button-actions">
+                            <ul>
+                                <li><a class="button-actions" ng-show="accessPoint.adopted" ng-click="forgetDevice(accessPoint.mac)"><i class="icon-trash" ></i></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </td>
+                    <td>
+                        <a ng-href="#/device/{{accessPoint.id}}">{{accessPoint.name}}/{{accessPoint.mac}}</a>
+                    </td>
+                    <td>{{accessPoint.model}}</td>
+                    <td>{{accessPoint.ip}}</td>
+                    <td>{{accessPoint | deviceStatus}}</td>
+                    <td>
+                        <div class="button-actions">
+                            <ul>
+                                <li><a ng-click="upgradeDevice(accessPoint)" ng-show="accessPoint.upgradable && accessPoint.state != 4"><i class="icon-circle-arrow-up"></i>Update</a>
+                                </li>
+                                <li><a ng-href="#/device/{{accessPoint.id}}" ng-show="accessPoint.state == 1"><i class="icon-list"></i>Details</a>
+                                </li>
+                                <li><a ng-click="adoptDevice(accessPoint)" ng-show="accessPoint.state == 2"><i class="icon-circle-arrow-down"></i>Adopt</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </td>
+                    <td>{{accessPoint.uptime | uptime}}</td>
+                    <td>{{accessPoint.user_num_sta}}</td>
+                    <td>{{accessPoint.version || ''}}</td>
+                    <td>
+                        <div class="button-actions">
+                            <ul>
+                                <li><a ng-show="accessPoint.state == 1" ng-click="redirect(accessPoint.id, 'activity')"><i class="icon-eye-open"></i>Activity</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <div class="pull-right">Showing {{(paginator.currentPage-1)*20}}-{{ paginator.currentPage*20 > paginator.totalItems ? paginator.totalItems : paginator.currentPage*20}} of {{paginator.totalItems}}</div>
+        <pagination total-items="paginator.totalItems" page="paginator.currentPage" max-size="10" items-per-page="20" boundary-links="true"></pagination>
 
-</tbody>
-</table>
-    <div class="pull-right">Showing {{(paginator.currentPage-1)*20}}-{{ paginator.currentPage*20 > paginator.totalItems ? paginator.totalItems : paginator.currentPage*20}} of {{paginator.totalItems}} </div>
-<pagination total-items="paginator.totalItems" page="paginator.currentPage" max-size="10" items-per-page="20" boundary-links="true"></pagination>
-
-</div>
+    </div>
 </div>
