--- a/web/src/main/webapp/templates/SiteSettings.html
+++ b/web/src/main/webapp/templates/SiteSettings.html
@@ -49,7 +49,6 @@
                                             </label>
                                             <div class="controls">
                                                 <input type="text" id="friendly_name" name="friendly_name" placeholder="Provide a name..." ng-model="site.friendly_name" required>
-                                                <i ng-hide="form.friendly_name.$error.required" class="icon-ok-sign active"></i>
                                                 <div ng-show="form.friendly_name.$error.required" class="tip help">Name is required</div>
                                             </div>
                                         </div>
@@ -59,7 +58,6 @@
                                             </label>
                                             <div class="controls">
                                                 <input type="text" id="alert_email" name="alert_email" placeholder="Provide an email address..." ng-model="site.alert_email" required pattern="email">
-                                                <i ng-hide="form.alert_email.$error.required" class="icon-ok-sign active"></i>
                                                 <div ng-show="form.alert_email.$error.required" class="tip help">An email is required</div>
                                             </div>
                                         </div>
@@ -92,7 +90,7 @@
                                             <input type="text" id="zip" name="zip" placeholder="Provide a zip..." ng-model="site.zip">
                                         </div>
                                     </div>
-                                    <h2 style="font-size: 20px">Access Point SSH Username and Password</h2>
+                                    <h2 style="font-size: 17px">Access Point SSH Username and Password</h2>
                                     <div class="control-group">
                                         <label for="x_ssh_username" class="control-label">Username</label>
                                         <div class="controls">
@@ -115,7 +113,7 @@
                                         </div>
                                         <div class="controls">
                                             <label class="radio">
-                                                <input type="radio" ng-model="settings.auth" value="none">No authentication
+                                                <input type="radio" ng-model="settings.auth" value="none">No authentication and Terms and Conditions
                                             </label>
                                             <label class="radio">
                                                 <input type="radio" ng-model="settings.auth"  value="password">Simple Password and Terms and Conditions
@@ -126,32 +124,32 @@
                                         <div class="control-label">IP Address:</div>
                                         <div class="controls">
                                             <input type="text" id="customIp" name="customIp" ng-model="settings.custom_ip" ng-required="settings.auth == 'custom'" valid-ip/>
-                                            <i ng-hide="form.customIp.$invalid" class="icon-ok-sign active"></i>
                                             <div ng-show="form.customIp.$invalid" class="tip help">Please provide an IP Address</div>
                                         </div>
                                     </div>
                                     <div class="control-group">
-                                        <div class="control-label">Company Name:</div>
+                                        <div class="control-label">Company Name:
                                         <i class="icon-question-sign section-help" tooltip-placement="left" tooltip="Uses the name entered in the predefined Terms and Conditions."></i>
+                                        </div>
                                         <div class="controls">
                                             <input type="text" id="companyName" name="companyName" ng-model="settings.companyName"/>
                                         </div>
                                     </div>
                                     <div class="control-group">
-                                        <div class="control-label">Terms and Conditions:</div>
+                                        <div class="control-label">Terms and Conditions:
                                         <i class="icon-question-sign section-help" tooltip-placement="left" tooltip="Alter for custom Terms and Conditions"></i>
+                                        </div>
                                         <div class="controls">
                                             <textarea type="text" id="terms" name="terms" ng-model="settings.terms" ng-required="settings.auth == 'password' || settings.auth == 'none'"></textarea>
                                             <div ng-show="form.terms.$invalid" class="tip help">Please provide the terms and conditions</div>
-                                        </div>
-                                        <div>
-                                            <div class="page-actions">
+                                            <div>
+                                            <div class="button-actions">
                                                 <ul>
                                                     <li><a ng-click="resetTerms()"><i class=""></i>Reset</a>
                                                     </li>
                                                 </ul>
                                             </div>
-
+                                        </div>
                                         </div>
                                     </div>
                                     <div class="control-group" ng-class="form.guestPassword.$invalid ? 'error' : ''" ng-show="settings.auth == 'password'">
@@ -159,7 +157,6 @@
                                         <div class="controls">
                                             <input type="{{ showPassword ? 'text' : 'password' }}" id="guestPassword" name="guestPassword" ng-model="settings.x_password" ng-required="settings.auth == 'password'"/>
                                             <label class="checkbox" style="display: inline-block;"><input type="checkbox" ng-model="showPassword">Show Password</label>
-                                            <i ng-hide="form.guestPassword.$invalid" class="icon-ok-sign active"></i>
                                             <div ng-show="form.guestPassword.$invalid" class="tip help">Please provide a password</div>
                                         </div>
                                     </div>
@@ -174,7 +171,6 @@
                                                 <option value="5760">4 days</option>
                                                 <option value="10080">7 days</option>
                                             </select>
-                                            <i ng-hide="form.expire.$error.required" class="icon-ok-sign active"></i>
                                             <div ng-show="form.expire.$error.required" class="tip help">Please select an expiration period</div>
                                         </div>
                                     </div>
@@ -193,7 +189,6 @@
                                         <div class="control-label">Promotional URL</div>
                                         <div class="controls">
                                             <input type="text" id="promoUrl" name="promoUrl" ng-model="settings.redirect_url" ng-required="settings.redirect_enabled"/>
-                                            <i ng-hide="form.promoUrl.$invalid" class="icon-ok-sign active"></i>
                                             <div ng-show="form.promoUrl.$invalid" class="tip help">Please provide a urli including 'http://'</div>
                                         </div>
                                     </div>
@@ -236,7 +231,6 @@
                                         <div class="control-label">Download Limit (Kbps) <i class="icon-question-sign section-help" tooltip-placement="top" tooltip="Average 32768 Kbps (4 MB/s) suggested. Limits below 8192 Kbps (1 MB/s) may result in poor performance."></i></div>
                                         <div class="controls">
                                             <input type="number" id="downloadLimit" name="downloadLimit" min="-1" ng-model="limits.qos_rate_max_down" ng-required="limits.downRate_enabled" />
-                                            <i ng-hide="form.downloadLimit.$invalid" class="icon-ok-sign active"></i>
                                             <div ng-show="form.downloadLimit.$invalid" class="tip help">Please provide a value</div>
                                         </div>
                                     </div>
@@ -255,7 +249,6 @@
                                         <div class="control-label">Upload Limit (Kbps) <i class="icon-question-sign section-help" tooltip-placement="top" tooltip="Average 8192 Kbps (1 MB/s) suggested. Limits below 2048 Kbps (256 KB/s) may result in poor performance."></i></div>
                                         <div class="controls">
                                             <input type="number" id="uploadLimit" name="uploadLimit" min="-1" ng-model="limits.qos_rate_max_up" ng-required="limits.upRate_enabled" />
-                                            <i ng-hide="form.uploadLimit.$invalid" class="icon-ok-sign active"></i>
                                             <div ng-show="form.uploadLimit.$invalid" class="tip help">Please provide a value</div>
                                         </div>
                                     </div>
