[US4063] Added terms reset, fixed button look

--- a/web/src/main/webapp/templates/SiteSettings.html
+++ b/web/src/main/webapp/templates/SiteSettings.html
@@ -145,7 +145,7 @@
                                             <div>
                                             <div class="button-actions">
                                                 <ul>
-                                                    <li><a ng-click="resetTerms()"><i class=""></i>Reset</a>
+                                                    <li><a ng-hide="settings.terms == settings.originalTerms" ng-click="resetTerms()"><i class="icon-folder-open"></i>Reset to Original</a>
                                                     </li>
                                                 </ul>
                                             </div>
