--- a/web/src/main/webapp/templates/Network.html
+++ b/web/src/main/webapp/templates/Network.html
@@ -107,7 +107,7 @@
                                                         </label>
                                                     </div>
                                                 </div>
-                                                <div ng-class="network.is_guest ? style='color: #aaa' : ''" class="control-group" >
+                                                <div ng-style="{ color: getColor()}" class="control-group" >
                                                     <div class="control-label">Security</div>
                                                     <div class="controls">
                                                         <label class="radio">
