--- a/web/src/main/webapp/templates/AccessPointList.html
+++ b/web/src/main/webapp/templates/AccessPointList.html
@@ -86,14 +86,9 @@
             <tbody>
                 <tr ng-repeat="accessPoint in accessPoints | filter: filter | storeItemCount: paginator.updateTotalItems | orderBy: paginator.orderBy | slice:(paginator.currentPage-1)*20:20">
                     <td>
-                        <div class="button-actions">
-                            <ul>
-                                <li><a class="button-actions" ng-show="accessPoint.adopted" ng-click="forgetDevice(accessPoint.mac)"><i class="icon-trash" ></i></a>
-                                </li>
-                            </ul>
-                        </div>
+                       	<a class="trash" ng-show="accessPoint.adopted" ng-click="forgetDevice(accessPoint.mac)"><i class="icon-trash" ></i></a>
                     </td>
-                    <td>
+                    <td style="white-space:nowrap;" >
                         <a ng-href="#/device/{{accessPoint.id}}">{{accessPoint.name}}/{{accessPoint.mac}}</a>
                     </td>
                     <td>{{accessPoint.model}}</td>
