--- a/web/src/main/webapp/templates/Users.html
+++ b/web/src/main/webapp/templates/Users.html
@@ -164,7 +164,7 @@
                             </ul>
                         </div>
                     </th>
-		    <th><a>Signal</a></th>
+		    <th><a>Signal<i class="icon-signal"></i></a></th>
                     <th><a ng-click="paginator.setOrder('tx_bytes')">Download<i ng-class="paginator | sortClass:'tx_bytes'"></i></a>
                     </th>
                     <th><a ng-click="paginator.setOrder('rx_bytes')">Upload<i ng-class="paginator | sortClass:'rx_bytes'"></i></a>
