--- a/web/src/main/webapp/css/jive.css
+++ b/web/src/main/webapp/css/jive.css
@@ -32,11 +32,18 @@
 	box-sizing: border-box
 }
 .spin {
-	transform:rotate(360deg);
--webkit-transform:rotate(360deg);
+	transform: rotate(360deg);
+	-webkit-transform: rotate(360deg);
+  -moz-transform: rotate(360deg);
+  -o-transform: rotate(360deg);
+  -ms-transform: rotate(360deg);
 }
 .icon-refresh {
 	transition: all .9s ease;
+	-webkit-transition: all 0.9s ease-in-out;
+  -moz-transition: all 0.9s ease-in-out;
+  -o-transition: all 0.9s ease-in-out;
+  -ms-transition: all 0.9s ease-in-out;
 }
 article, aside, details, figcaption, figure, footer, header, hgroup, nav, section {
 	display: block
